--- a/app/sass/slider.scss
+++ b/app/sass/slider.scss
@@ -4,6 +4,7 @@
     margin-right:auto;    
     width:70%;
     height:280px;
+    border-radius: 10px;
 }
 .imgsmall{
     display:inline-block;
@@ -15,7 +16,7 @@
     margin-left:auto;
     margin-right:auto; 
     margin-top:-70px;
-    width: 630px;
+    width: 680px;
  	background:white;
  	position:relative;
  	padding:10px;
