--- a/app/sass/menu.scss
+++ b/app/sass/menu.scss
@@ -1,28 +1,38 @@
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-    width: 980px;
-    margin: 0 auto;
-    font-family: sans-serif;
-    font-size-adjust: 15px;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: #333;
+	width: 980px;
+	margin: 0 auto;
+	font-family: sans-serif;
+	font-size: 14px;
+	border-radius:10px;
+}
+div	{
+	display: block;
+	color:	#787878;
+	text-align: center;
+	padding: 10px 14px;
+	//text-decoration: none;
+	font-size: 10px;
 }
 
 li {
-    float: left;
-    text-align: center;
-
+	float: left;
+	text-align: left;
+	// width: 130px;
+	border: 1px;
 	a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+		display: block;
+		color: white;
+		text-align: center;
+		padding: 14px 10px;
+		text-decoration: none;
 	}
 
 	a:hover {
-    background-color: #111;
+		background-color: #111;
 	}
 }
