--- a/app/sass/sidebar.scss
+++ b/app/sass/sidebar.scss
@@ -1,7 +1,7 @@
 body {
 	background: white;
 	min-height:800px;
-	width:540px;
+	width:320px;
 	//float:right;
 
 
@@ -14,26 +14,30 @@ body {
 		font-size: 10px;
 		font-style: italic;
 		line-height: 16px;
-		margin-left: 100px;
+		margin-left: 20px;
 		}
 		
 		.single_sidebar input {
 			padding: 10px;
-			width: 62%;
+			width: 92%;
+		}
+
+		.single_sidebar span {
+			background: white;
+			//float: left;
+			padding-right: 45px;
+ 			//background: #ffffff;
+ 			line-height: 15px;
 		}
 
 		.single_sidebar h2{
-			background: url("../images/title_bg.png");
+			background: url("../images/title_bg.png") repeat top left;
 			color: #444444;
 			font-family: georgia;
-			font-size: 12px;
+			font-size: 14px;
 			font-style: italic;
-			line-height: 16px;
-			//margin-left: 100px;
-		.single_sidebar span {
-			background: white;
-			float: left;
-		}	
+			line-height: 12px;
+			
 	}
 
 		.single_sidebar ul li {
@@ -47,7 +51,7 @@ body {
 		.single_sidebar ul li a {
 			color: #444444;
 			font-family: Helvetica;
-			font-size: 16px;
+			font-size: 14px;
 			padding: 10px 0;
 			margin-top: 10px; 
     		margin-bottom: 10px; 
@@ -56,14 +60,17 @@ body {
 		}
 
 		.single_sidebar_tags a {
-			padding: 5px;
-			width: 92%;
-			color: white;
-			text-decoration:none;
-			font-family: Helvetica;
-			font-size: 16px;
-			font-style: normal;
-			background:#666666;
-			display-inline:block;
-	}
+			position: relative;
+			display: inline-block;
+ 			background: #666666;
+ 			padding: 10px;
+ 			margin: 0px 5px 5px 0px;
+ 			color: #ffffff;
+ 			font-weight: normal;
+ 			text-decoration: none;
+ 			border-radius: 5px 0px 5px 0px;
+ 			font-family: Helvetica;
+ 			font-style: normal;
+ 			font-size: 16px;
+		}
 }
